# StableRandomNonlinearNetsPy

./: .gitignore  README.md  pyproject.toml
Matlab/docs/equations/: Table_1.tex  equations_with_nonlinear_activation_docx.docx
Matlab/fig_scripts/: set_fig_defaults.m
Matlab/fig_scripts/basic_example/: SRNN_basic_example.m  set_SRNN_paths.m
Matlab/src/SRNN/: SRNN.m  SRNN_Jacobian.m  SRNN_NL.m
Matlab/src/SRNN/SRNN_utils/: SRNN_tseries_figure.m  SRNN_tseries_figure_IED.m  SRNN_tseries_figure_IED_adapt.m  SRNN_tseries_plot.m  compute_dependent_variables.m  generate_M.m  generate_M_no_iso.m  get_EI_indices.m  get_minMaxRange.m  package_params.m  poissrnd.m  squeeze_dim.m  unpack_SRNN_state.m
Matlab/src/algorithms/Kaplan_Yorke/: kaplan_yorke_dim.m
Matlab/src/algorithms/Lyapunov/: benettin_algorithm.m  lyapunov_spectrum_qr.m  lyapunov_spectrum_svd.m
Matlab/src/algorithms/analytic_fixed_point_spectrum/: LLE_analytic_SRNN.m  LLE_analytic_SRNN_fcn.m  LLE_analytic_SRNN_robust.m  LLE_analytic_SRNN_robust_extra_stable_fcn.m  LLE_analytic_SRNN_robust_fcn.m  LLE_analytic_SRNN_stable.m  LLE_analytic_SRNN_stable_2.m
Matlab/src/algorithms/info/: mutual_info_MIMO.m  mutual_info_SISO.m
Matlab/src/algorithms/ode_solvers/: ode4_wrapper.m  ode_RKn_deci_bounded.m
docs/equations/: equations.tex  equations_docx.docx
examples/: basic_example.py
src/SRNN/: __init__.py  activation.py  dependent.py  dynamics.py  params.py  simulate.py  srnn.py  state.py
src/SRNN/algorithms/lyapunov/: benettin.py
src/SRNN/utils/: generate_M_no_iso.py  get_EI_indices.py  get_minmax_range.py
(+14 files in other folders)
