[build-system]
requires = [
  "setuptools>=61",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "StableRandomNonlinearNetsPy"
version = "0.0.1"
description = "Continuous-time RNNs with spike-frequency adaptation and synaptic depression"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Tom Richner" }]
keywords = ["RNN", "neuroscience", "dynamical-systems", "ODE", "Lyapunov"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[project.optional-dependencies]
opt = [
  "numba",
  "networkx",
  "seaborn",
  "tqdm",
  "h5py",
  "joblib",
]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
  "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

